# stablize-service

./: Dockerfile  README.md  alignutils.py  app.py  audio_operations.py  log.py  pyproject.toml  segment.py  segment_validator.py  segments_sentences_matcher.py  sentence_matcher.py  sentence_operations.py  test_alignutils.py  test_audio_operations.py  test_segment_validator.py  test_sentence_operations.py  token_operations.py  utils.py
.github/workflows/: docker-publish.yml
tests/: 2.json  all.txt  p.py  synthesize-result-1456204682-segments.json  synthesize-result-1456204682.aac  synthesize-result-1456204682.json  synthesize-result-1853290794.aac  synthesize-result-1853290794.json  synthesize-result-2532432836-segments.json  synthesize-result-2532432836.json  synthesize-result-2532432836___61_54___23_5___57_32_end.json  synthesize-result-2532432836___61_54___23_5_end-segments.json  synthesize-result-2532432836___61_54___23_5_end.json  synthesize-result-2532432836___61_54_end-segments.json  synthesize-result-2532432836___61_54_end.mp3.json  synthesize-result.aac  test.py  tokens-2.json  tokens.json
