[tool.poetry]
name = "stablize-service"
version = "0.1.0"
description = ""
authors = ["qtvhao"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
stable-ts = "2.0.0"
torch = { url = "https://download.pytorch.org/whl/cpu/torch-1.13.1%2Bcpu-cp310-cp310-linux_x86_64.whl" }
numpy = "1.26.4"
gunicorn = "23.0.0"
flask = "3.0.3"

[tool.poetry.group.dev.dependencies]
pytest-watch = "^4.2.0"
hypothesis = "^6.118.0"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
