[tool.poetry]
name = "stablize-service"
version = "0.1.0"
description = ""
authors = ["qtvhao"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
gunicorn = "23.0.0"
flask = "3.0.3"

[tool.poetry.group.dev.dependencies]
pytest-watch = "^4.2.0"
hypothesis = "^6.118.0"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
