[tool.poetry]
name = "stablize-service"
version = "0.1.0"
description = ""
authors = ["qtvhao"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
gunicorn = "23.0.0"
flask = "3.0.3"
flask-cors = "5.0.0"

[tool.poetry.group.dev.dependencies]
pytest-watch = "^4.2.0"
hypothesis = "^6.118.0"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
